yes I added a line

--- a/first.html
+++ b/first.html
@@ -6,5 +6,6 @@
     <body>
         Ok bro this whit's absolutely amazing
         Hello whatever
+        Ok let's experiment with merge conflictzz
     </body>
 </html>
