I made it look the same as online but one less line
Everything is fine.

--- a/first.html
+++ b/first.html
@@ -3,8 +3,8 @@
     <head>
         <title>File for repository</title>
     </head>
-    <body>
-        Ok bro this whit's absolutely amazing
+    <body style= float="left-align">
+        Ok bro this shit's absolutely amazing
         Hello whatever
         Ok let's experiment with merge conflictzz
     </body>
