--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
     <head>
         <title>File for repository</title>
     </head>
-    <body style= float="left-align">
+    <body style= float:left>
         Ok bro this shit's absolutely amazing
         Hello whatever
         Ok let's add another line now
