Added a second file and
edited some other stuff

--- a/first.html
+++ b/first.html
@@ -7,5 +7,7 @@
         Ok bro this shit's absolutely amazing
         Hello whatever
         Ok let's add another line now
+
+        But also a little edit here wouldn't be bad...
     </body>
 </html>
